# cachified-rs

./: Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  soft_purge.rs  stale_while_revalidate.rs  validation.rs
src/: cache.rs  error.rs  lib.rs  metadata.rs  options.rs  validation.rs
tests/: integration_tests.rs  soft_purge_tests.rs
